--- a/index.html
+++ b/index.html
@@ -347,18 +347,26 @@
     }
     body.rtl .kv .v{ text-align: left; }
 
-  </style>
+  
+.logo-img {
+    height: 75px;
+    width: auto;
+    filter: drop-shadow(0 0 8px rgba(212,175,55,0.35));
+}
+</style>
+
 </head>
 
 <body>
   <div class="container">
     <header>
-      <div class="logo-container">
-        <!-- Put LOGO.png in the same folder if you want the 1885 logo to appear -->
-        <img src="LOGO.png" alt="1885 Logo" onerror="this.style.display='none'; document.getElementById('logo-fallback').style.display='flex';">
-        <div id="logo-fallback" style="display:none; width:90px; height:90px; background: linear-gradient(135deg, #D4AF37 0%, #8B6914 100%); border-radius:50%; align-items:center; justify-content:center; font-size:1.8rem; font-weight:900; color:#0a0a0a; border:3px solid #F4E4BC;">
-          1885
-        </div>
+      
+<div class="logo-container" style="display:flex;align-items:center;justify-content:center;gap:20px;">
+    <img src="1885-logo.jfif" alt="1885 Logo" class="logo-img">
+    <span style="font-size:28px;color:#D4AF37;font-weight:600;">×</span>
+    <span style="font-size:32px;font-weight:700;color:#ffffff;letter-spacing:3px;">NAQSH</span>
+</div>
+
 
         <div class="brand-text">
           <h1>1885 × NAQSH</h1>
