--- a/index.html
+++ b/index.html
@@ -36,21 +36,32 @@
       overflow-x:hidden;
     }
 
-    .container{ max-width:1200px; margin:0 auto; padding:20px; }
+    .container{
+      width:100%;
+      max-width: 1180px;
+      margin: 0 auto;
+      padding: 28px 24px 80px;
+    }
 
     header{
       display:flex;
-      justify-content:space-between;
+      flex-direction: column;
+      justify-content:center;
       align-items:center;
-      padding:20px 0;
+      padding:26px 0 22px;
       border-bottom:2px solid;
       border-image: linear-gradient(90deg, transparent, var(--gold-primary), transparent) 1;
-      margin-bottom:30px;
-      flex-wrap:wrap;
-      gap:20px;
+      margin-bottom:34px;
+      gap:16px;
     }
 
-    .logo-container{ display:flex; align-items:center; gap:20px; }
+    .logo-container{
+      width: 100%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:20px;
+    }
     .logo-container img{
       height:90px; width:auto;
       filter: drop-shadow(0 4px 6px rgba(0,0,0,0.5));
@@ -172,11 +183,13 @@
     }
 
     .row-inline{
+      width:100%;
       display:flex;
       gap:12px;
       align-items:center;
+      justify-content:center;
       flex-wrap:wrap;
-      margin-top: 8px;
+      margin-top: 0;
       color: var(--text-gray);
       font-size: 0.95rem;
     }
@@ -353,7 +366,72 @@
     width: auto;
     filter: drop-shadow(0 0 8px rgba(212,175,55,0.35));
 }
-</style>
+
+    /* Spacious luxury layout tuning */
+    .calculator-section{
+      max-width: 1100px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 44px;
+    }
+
+    .section-subtitle{
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 1.02rem;
+      line-height: 1.85;
+    }
+
+    .input-group{
+      gap: 22px;
+      margin-bottom: 22px;
+    }
+
+    .quote-card{
+      padding: 34px;
+    }
+
+    .kv{
+      gap: 14px;
+      margin-top: 14px;
+    }
+
+    header{
+      padding: 26px 0 22px;
+      margin-bottom: 34px;
+    }
+
+    /* Keep content readable on very wide screens */
+    @media (min-width: 1200px){
+      body{
+        padding-top: 24px;
+        padding-bottom: 44px;
+      }
+      .calculator-section{
+        padding: 52px;
+        border-radius: 24px;
+      }
+      .section-title{
+        font-size: 2.2rem;
+      }
+      .price-big{
+        font-size: 2.8rem;
+      }
+    }
+
+    @media (min-width: 1600px){
+      .container{ max-width: 1260px; }
+      .calculator-section{ max-width: 1160px; }
+    }
+
+    /* Slightly softer, luxury card edges */
+    .calculator-section, .quote-card, .kv .item{
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+    }
+
+  </style>
 
 </head>
 
@@ -361,7 +439,7 @@
   <div class="container">
     <header>
       
-<div class="logo-container" style="display:flex;align-items:center;justify-content:center;gap:20px;">
+<div class="logo-container">
     <img src="1885-logo.jfif" alt="1885 Logo" class="logo-img">
     <span style="font-size:28px;color:#D4AF37;font-weight:600;">×</span>
     <span style="font-size:32px;font-weight:700;color:#ffffff;letter-spacing:3px;">NAQSH</span>
