--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       flex-direction: column;
       justify-content:center;
       align-items:center;
-      padding:26px 0 22px;
+      padding:18px 0 14px;
       border-bottom:2px solid;
       border-image: linear-gradient(90deg, transparent, var(--gold-primary), transparent) 1;
-      margin-bottom:34px;
-      gap:16px;
+      margin-bottom:18px;
+      gap:10px;
     }
 
     .logo-container{
@@ -185,11 +185,12 @@
     .row-inline{
       width:100%;
       display:flex;
-      gap:12px;
+      gap:10px;
       align-items:center;
       justify-content:center;
       flex-wrap:wrap;
-      margin-top: 0;
+      margin: 0;
+      padding: 0;
       color: var(--text-gray);
       font-size: 0.95rem;
     }
@@ -440,18 +441,14 @@
     <header>
       
 <div class="logo-container">
-    <img src="1885-logo.jfif" alt="1885 Logo" class="logo-img">
+    <img src="1885%20logo.jfif" alt="1885 Logo" class="logo-img" onerror="this.style.display=\'none\';document.getElementById(\'logoFallback\').style.display=\'flex\';">
     <span style="font-size:28px;color:#D4AF37;font-weight:600;">×</span>
     <span style="font-size:32px;font-weight:700;color:#ffffff;letter-spacing:3px;">NAQSH</span>
 </div>
 
 
-        <div class="brand-text">
-          <h1>1885 × NAQSH</h1>
-</div>
-      </div>
-
-      <div class="row-inline">
+        </div>
+<div class="row-inline">
         <span class="chip"><strong><span data-i18n="currency">Currency:</span></strong> AED</span>
         <span class="chip"><strong><span data-i18n="vat">VAT:</span></strong> <span data-i18n="vat_default">excluded by default</span></span>
         <button class="chip lang-btn" id="langBtn" onclick="toggleLang()" type="button"><strong>AR</strong> العربية</button>
